[metadata]
name = creload
description = Import inside a forked process to allow temporary imports of C extensions
author = Tobias Bergkvist
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    creload
python_requires = >=3.7
zip_safe = no 
